--- a/jsObjectCreator/jsObjectCreator.css
+++ b/jsObjectCreator/jsObjectCreator.css
@@ -31,3 +31,113 @@
 
 
 }
+
+
+
+body {
+    display: flex;
+    flex-flow: column wrap;
+    text-align: left;
+    padding: 2%;
+    margin: 2%;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    margin-top: 0;
+}
+
+
+input[type=text],
+select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid var(--color-black);
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.objectSubmit {
+
+    width: 100%;
+    background-color: var(--color-cyan);
+    color: var(--color-white);
+    padding: 7px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+
+
+#objectCreatorContainer {
+    display: grid;
+    width: 50%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(7);
+    grid-column-gap: 3px;
+    grid-row-gap: 3px;
+    border: 13px double #3B3C37;
+    border-radius: 25px 0px 25px 0px;
+    padding: 10px;
+    margin: 10px;
+    align-items: center;
+    height: 100%;
+}
+
+#objectNameInputLable {
+    grid-area: 1 / 1 / 2 / 3;
+    height: min-content;
+}
+
+#objectNameInput {
+    grid-area: 1 / 3 / 2 / 5;
+    height: min-content;
+}
+
+#keyNumberLabel {
+    grid-area: 2 / 1 / 3 / 3;
+    height: min-content;
+}
+
+#keyNumber {
+    grid-area: 2 / 3 / 3 / 5;
+    height: min-content;
+}
+
+#nameToggleLabel {
+    grid-area: 3 / 1 / 4 / 3;
+    height: min-content;
+}
+
+#nameToggle {
+    grid-area: 3 / 3 / 4 / 5;
+    height: min-content;
+}
+
+#keyContainer {
+    grid-area: 4 / 1 / 5 / 5;
+    height: min-content;
+}
+
+#submit {
+    grid-area: 5 / 2 / 6 / 4;
+    height: min-content;
+}
+
+#submitThree {
+    grid-area: 6 / 2 / 7 / 4;
+    height: min-content;
+}
+
+#submitTwo {
+    grid-area: 7 / 2 / 8 / 4;
+    height: min-content;
+}
